[gd_scene load_steps=2 format=3 uid="uid://cu3fjbb8ek0ik"]

[ext_resource type="Script" path="res://src/post-game/post_game.gd" id="1_chi2y"]

[node name="PostGame" type="Node"]
script = ExtResource("1_chi2y")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -11.5
offset_right = 82.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MATCH_ENDED_TITLE"

[node name="Next" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "NEXT"

[node name="Quit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT_GAME"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
